--- a/intro.html
+++ b/intro.html
@@ -19,8 +19,10 @@
 		Whether you wear it, or see it out your window, we want to know how you're trending.
 	</p>
 	<hr class="aldo-ct-hr"/>
+	<br>
+	<img src="https://dl.dropbox.com/u/9285375/swirl.png"><br><br>
 	<h1 class="aldo-ct-h1">How It Works</h1>
-	<hr class="aldo-ct-hr"/>
+	
 	<p class="aldo-ct-p">
 		Share your version of one of ALDO's Spring 13 Trends.
 	</p>
@@ -46,13 +48,17 @@
 	</p>
 	<hr class="aldo-ct-hr"/>
 
+	<br>
+	<img src="https://dl.dropbox.com/u/9285375/swirl.png"><br><br>
+
 	<h1 class="aldo-ct-h1">Prize</h1>
-	<hr class="aldo-ct-hr"/>
+	
 	<p class="aldo-ct-p">
 		Show us your On Style inspiration for the chance to win br 1 of <span class="aldo-ct-invert">$500 (£330)</span> ALDO gift cards. 
 		1 winner will be chosen from each Spring 13 Trend group (Plastic Fantastic, Culture Clash, and Virtual Dreams), for a total of 3 winners. The selection of the Grand Prize winners will be announced April 26th,2013 on the ALDO Facebook Page.
-	</p>
-	
+	</p><br>
+	<hr class="aldo-ct-hr"/>	<br>
+	<img src="https://dl.dropbox.com/u/9285375/swirl.png"><br><br>
 
 
 </div>
