button added and typo changed

--- a/intro.html
+++ b/intro.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<meta charset="utf-8">
 	<link href="css/main.css" rel="stylesheet" type="text/css" charset="utf-8" />
 
 	<link href="css/timeline_contest.css" rel="stylesheet" type="text/css" charset="utf-8" />
@@ -19,38 +20,36 @@
 		Spring is here and now is the time to set your style in motion. <br>
 		Whether you wear it, or see it out your window, we want to know how you're trending.
 	</p>
-	<hr class="aldo-ct-hr"/>
+	
 	<br>
-	<img src="https://dl.dropbox.com/u/9285375/swirl.png"><br><br>
+	<img src="https://dl.dropbox.com/u/9285375/swirl.png"><br>
 	<h1 class="aldo-ct-h1">How It Works</h1>
 	
-	<p class="aldo-ct-p">
-		Share your version of one of ALDO's Spring 13 Trends.
-	</p>
+	
 
 	<p class="aldo-ct-p">
-
+		Share your version of one of ALDO's Spring 13 Trends.<br>
 		Upload your entry photo to the ALDO On Style Facebook App. Your photo can be:
 		<ul class="aldo-ct-ul">
-			<li class="aldo-ct-li">- A picture of your outfit</li>
-			<li class="aldo-ct-li">- A picture of a friends outfit</li>
-			<li class="aldo-ct-li">- A soda can</li>
-			<li class="aldo-ct-li">- Anything that inspires you about one of our Spring Trends</li>
-			<li class="aldo-ct-li">- *But remember, they have to be your own original images!</li>
-			<li class="aldo-ct-li">- Tag it in one of the 3 ALDO Trends:</li>
-			<li class="aldo-ct-li">- Plastic Fantastic</li>
-			<li class="aldo-ct-li">- Culture Clash</li>
-			<li class="aldo-ct-li">- Virtual Dreams</li>
-			<li class="aldo-ct-li">- Share it with friends</li>
-			<li class="aldo-ct-li">- Click the Love It button for the other submissions you enjoy!</li>
-			<li class="aldo-ct-li">- Tune it regularly to see new submissions and to find out if you've won!</li>
+			<li class="aldo-ct-li">A picture of your outfit</li>
+			<li class="aldo-ct-li">• A picture of a friends outfit</li>
+			<li class="aldo-ct-li">• A soda can</li>
+			<li class="aldo-ct-li">• Anything that inspires you about one of our Spring Trends</li>
+			<li class="aldo-ct-li">• *But remember, they have to be your own original images!</li>
+			<li class="aldo-ct-li">• Tag it in one of the 3 ALDO Trends:</li>
+			<li class="aldo-ct-li">• Plastic Fantastic</li>
+			<li class="aldo-ct-li">• Culture Clash</li>
+			<li class="aldo-ct-li">• Virtual Dreams</li>
+			<li class="aldo-ct-li">• Share it with friends</li>
 		</ul>
+		 Click the Love It button for the other submissions you enjoy!<br>
+		 Tune it regularly to see new submissions and to find out if you've won!
 		
 	</p>
-	<hr class="aldo-ct-hr"/>
+	
 
-	<br>
-	<img src="https://dl.dropbox.com/u/9285375/swirl.png"><br><br>
+	
+	<img src="https://dl.dropbox.com/u/9285375/swirl.png"><br>
 
 	<h1 class="aldo-ct-h1">Prize</h1>
 	
@@ -58,7 +57,6 @@
 		Show us your On Style inspiration for the chance to win br 1 of <span class="aldo-ct-invert">$500 (£330)</span> ALDO gift cards. 
 		1 winner will be chosen from each Spring 13 Trend group (Plastic Fantastic, Culture Clash, and Virtual Dreams), for a total of 3 winners. The selection of the Grand Prize winners will be announced April 26th,2013 on the ALDO Facebook Page.
 	</p><br>
-	<hr class="aldo-ct-hr"/>	<br>
 	<img src="https://dl.dropbox.com/u/9285375/swirl.png"><br><br>
 
 
