bolded the h1 and text has been reformated
according to maya's directions

--- a/intro.html
+++ b/intro.html
@@ -28,26 +28,40 @@
 	
 
 	<p class="aldo-ct-p">
-		Share your version of one of ALDO's Spring 13 Trends.<br>
-		Upload your entry photo to the ALDO On Style Facebook App. Your photo can be:
+		<span class="aldo-ct-bold">
+		Share your version of one of ALDO's Spring 13 Trends.</span><br>
+		Upload your entry photo to the ALDO On Style Facebook App. 
+		<br><br>
+		Your photo can be:
 		<ul class="aldo-ct-ul">
 			<li class="aldo-ct-li">A picture of your outfit</li>
 			<li class="aldo-ct-li">• A picture of a friends outfit</li>
 			<li class="aldo-ct-li">• A soda can</li>
 			<li class="aldo-ct-li">• Anything that inspires you about one of our Spring Trends</li>
-			<li class="aldo-ct-li">• *But remember, they have to be your own original images!</li>
-			<li class="aldo-ct-li">• Tag it in one of the 3 ALDO Trends:</li>
+		</ul>
+
+
+		<div class="aldo-ct-small">*But remember, they have to be your own original images!</div>
+	</p>
+	<p class="aldo-ct-p">
+		<span class="aldo-ct-bold">
+		Tag it in one of the 3 ALDO Trends:</span><br>
+		<ul class="aldo-ct-ul">
 			<li class="aldo-ct-li">• Plastic Fantastic</li>
 			<li class="aldo-ct-li">• Culture Clash</li>
 			<li class="aldo-ct-li">• Virtual Dreams</li>
-			<li class="aldo-ct-li">• Share it with friends</li>
+			
 		</ul>
+	</p>
+	<p class="aldo-ct-p">
+	<span class="aldo-ct-bold">
+		Share it with friends</span><br>
 		 Click the Love It button for the other submissions you enjoy!<br>
 		 Tune it regularly to see new submissions and to find out if you've won!
 		
-	</p>
 	
-
+	
+<br><br>
 	
 	<img src="https://dl.dropbox.com/u/9285375/swirl.png"><br>
 
@@ -56,8 +70,8 @@
 	<p class="aldo-ct-p">
 		Show us your On Style inspiration for the chance to win br 1 of <span class="aldo-ct-invert">$500 (£330)</span> ALDO gift cards. 
 		1 winner will be chosen from each Spring 13 Trend group (Plastic Fantastic, Culture Clash, and Virtual Dreams), for a total of 3 winners. The selection of the Grand Prize winners will be announced April 26th,2013 on the ALDO Facebook Page.
-	</p><br>
-	<img src="https://dl.dropbox.com/u/9285375/swirl.png"><br><br>
+	</p>
+	<br><br>
 
 
 </div>
