--- a/intro.html
+++ b/intro.html
@@ -37,12 +37,22 @@
 			<li class="aldo-ct-li">A picture of your outfit</li>
 			<li class="aldo-ct-li">• A picture of a friends outfit</li>
 			<li class="aldo-ct-li">• A soda can</li>
-			<li class="aldo-ct-li">• Anything that inspires you about one of our Spring Trends</li>
+			<li class="aldo-ct-li"><br>Anything that inspires you about one of our Spring Trends</li>
 		</ul>
 
 
 		<div class="aldo-ct-small">*But remember, they have to be your own original images!</div>
 	</p>
+	<p class="aldo-ct-p">
+		<span class="aldo-ct-bold">
+			Need Inspiration?
+		</span><br>
+		<a href="http://trends.aldoshoes.com/" style="color:#028BD5"target="_blank" title="">Check out the ALDO On Style section</a>
+		
+	</p>
+
+
+	
 	<p class="aldo-ct-p">
 		<span class="aldo-ct-bold">
 		Tag it in one of the 3 ALDO Trends:</span><br>
@@ -59,7 +69,15 @@
 		 Click the Love It button for the other submissions you enjoy!<br>
 		 Tune it regularly to see new submissions and to find out if you've won!
 		
-	
+	</p>
+
+	<p class="aldo-ct-p">
+		<span class="aldo-ct-bold">
+			Want to Enter Via Twitter or Instagram
+		</span><br>
+		Make sure to hashtag your photo with #ALDOonStyle and then come back to the ALDO On Style Photo Contest App to claim your photo and be eligible to win.
+		
+	</p>
 	
 <br><br>
 	
