translation and copy updated

--- a/intro.html
+++ b/intro.html
@@ -30,7 +30,7 @@
 	<p class="aldo-ct-p">
 		<span class="aldo-ct-bold">
 		Share your version of one of ALDO's Spring 13 Trends.</span><br>
-		Upload your entry photo to the ALDO On Style Facebook App. 
+		Submit your entry photo to the ALDO On Style Facebook App. 
 		<br><br>
 		Your photo can be:
 		<ul class="aldo-ct-ul">
@@ -59,7 +59,7 @@
 		<ul class="aldo-ct-ul">
 			<li class="aldo-ct-li">• Plastic Fantastic</li>
 			<li class="aldo-ct-li">• Culture Clash</li>
-			<li class="aldo-ct-li">• Virtual Dreams</li>
+			<li class="aldo-ct-li">• Virtual Dream</li>
 			
 		</ul>
 	</p>
@@ -86,8 +86,8 @@
 	<h1 class="aldo-ct-h1">Prize</h1>
 	
 	<p class="aldo-ct-p">
-		Show us your On Style inspiration for the chance to win br 1 of <span class="aldo-ct-invert">$500 (£330)</span> ALDO gift cards. 
-		1 winner will be chosen from each Spring 13 Trend group (Plastic Fantastic, Culture Clash, and Virtual Dreams), for a total of 3 winners. The selection of the Grand Prize winners will be announced April 26th,2013 on the ALDO Facebook Page.
+		Show us your On Style inspiration for the chance to win 1 of 3 <span class="aldo-ct-invert">$500 (£330)</span> ALDO gift cards. 
+		1 winner will be chosen from each Spring 13 Trend group (Plastic Fantastic, Culture Clash, and Virtual Dream), for a total of 3 winners. The selection of the Grand Prize winners will be announced April 26th,2013 on the ALDO Facebook Page.
 	</p>
 	<br><br>
 
