--- a/intro_fr.html
+++ b/intro_fr.html
@@ -28,25 +28,25 @@
 
 	<p class="aldo-ct-p">
 		<span class="aldo-ct-bold">
-		Partagez votre version personnalisée de l’une <br> des treize tendances printanières d’ALDO</span><br>
-		Pour participer, téléchargez votre photo vers l’application <br>Facebook Par Ici Le Style d’ALDO. 
+		Partagez votre version personnalisée de l’une <br> des 3 tendances printanières d’ALDO</span><br>
+		Pour participer, téléchargez votre photo vers l’application <br>Facebook "Par Ici Le Style d’ALD". 
 		<br><br>
 		Vous pouvez choisir de soumettre :
 		<ul class="aldo-ct-ul">
 			<li class="aldo-ct-li">Une photo de votre propre tenue </li>
 			<li class="aldo-ct-li">• Une photo de la tenue d’un(e) de vos ami(e)s</li>
 			<li class="aldo-ct-li"><br> Une photo d’une bouteille de boisson gazeuse</li>
-			<li class="aldo-ct-li">• N’importe quoi d’autre qui vous rappelle<br> l’une  de nos tendances printanières</li>
+			<li class="aldo-ct-li"><br> N’importe quoi d’autre qui vous rappelle l’une  de nos tendances printanières</li>
 		</ul>
 
 
-		<div class="aldo-ct-small">*But remember, they have to be your own original images!</div>
+		<div class="aldo-ct-small">*Par contre, il doit s’agir de vos propres photos originales!</div>
 	</p>
 	<p class="aldo-ct-p">
 		<span class="aldo-ct-bold">
 			Besoin d'inspiration ? 
 		</span><br>
-		<a href="http://trends.aldoshoes.com/" style="color:#028BD5"target="_blank" title="">Visitez notre section Aldo par ici le style.</a>
+		<a href="http://trends.aldoshoes.com/?lang=fr-ca" style="color:#028BD5"target="_blank" title="">Visitez notre section ALDO Par Ici Le Style.</a>
 		
 	</p>
 
@@ -74,7 +74,7 @@
 		<span class="aldo-ct-bold">
 			Vous souhaitez participer via Twitter ou Instagram ?
 		</span><br>
-		Assurez vous de hashtag votre photo avec #AldoParIciLeStyle et revenez sur l'application du concours Aldo Par Ici le style, afin de réclamer votre photo et d'avoir la chance d'être un de nos gagnants.
+		Assurez vous de mettre le hashtag  #AldoParIciLeStyle avec votre photo et revenez sur l'application du concours Aldo Par Ici le style, afin de réclamer votre photo et d'avoir la chance d'être un de nos gagnants.
 		
 	</p>
 	
