hide the backgroup of image gallery

--- a/intro_fr.html
+++ b/intro_fr.html
@@ -29,13 +29,13 @@
 	<p class="aldo-ct-p">
 		<span class="aldo-ct-bold">
 		Partagez votre version personnalisée de l’une <br> des 3 tendances printanières d’ALDO</span><br>
-		Pour participer, téléchargez votre photo vers l’application <br>Facebook "Par Ici Le Style d’ALD". 
+		Pour participer, téléchargez votre photo vers l’application <br>Facebook "Par Ici Le Style d’ALDO". 
 		<br><br>
 		Vous pouvez choisir de soumettre :
 		<ul class="aldo-ct-ul">
 			<li class="aldo-ct-li">Une photo de votre propre tenue </li>
 			<li class="aldo-ct-li">• Une photo de la tenue d’un(e) de vos ami(e)s</li>
-			<li class="aldo-ct-li"><br> Une photo d’une bouteille de boisson gazeuse</li>
+			<li class="aldo-ct-li">• Une photo d’une bouteille de boisson gazeuse</li>
 			<li class="aldo-ct-li"><br> N’importe quoi d’autre qui vous rappelle l’une  de nos tendances printanières</li>
 		</ul>
 
@@ -74,7 +74,7 @@
 		<span class="aldo-ct-bold">
 			Vous souhaitez participer via Twitter ou Instagram ?
 		</span><br>
-		Assurez vous de mettre le hashtag  #AldoParIciLeStyle avec votre photo et revenez sur l'application du concours Aldo Par Ici le style, afin de réclamer votre photo et d'avoir la chance d'être un de nos gagnants.
+		Assurez vous de mettre le hashtag  #AldoParIciLeStyle avec votre photo et revenez sur l'application du concours Aldo Par Ici le Style, afin de réclamer votre photo et d'avoir la chance d'être un de nos gagnants.
 		
 	</p>
 	
